Bug 912981 - Expose srcdoc status in nsIViewSourceChannel. r=bz